--- a/index.html
+++ b/index.html
@@ -1,29 +1,28 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>WebAR制作ページ</title>
-</head>
-<body>
-<script src="main.js"></script>
-<link href="style.css" rel="stylesheet">
-<div id="device-orien-modal" class="device-orien-modal is-hidden">
-	<div class="device-orien-modal-inner">
-		<p>
-			このページでは端末の向きと方向を取得します。<br />
-			次に表示されるポップアップに従って「許可」を選択してください。
-		</p>
-		<button
-				id="device-orien-modal-button"
-				class="device-orien-modal-button"
-		>
-			OK
-		</button>
-	</div>
-</div>
-<canvas id="canvas" class="canvas"></canvas>
-<video src="" id="camera" class="camera" playsinline></video>
-</body>
+<!doctype html>
+<html lang="">
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+        <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
+        <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+        <title></title>
+    </head>
+
+    <body style="margin: 0; overflow: hidden;">
+        <a-scene
+            embedded
+            loading-screen="enabled: false;"
+            arjs="sourceType: webcam; debugUIEnabled: false;"
+        >
+                <a-image
+                    src="assets/asset.png"
+                    look-at="[gps-camera]"
+                    scale="1 1 1"
+                    gps-entity-place="latitude: 33.584101; longitude: 130.421666;"
+                ></a-image>
+
+            <a-camera gps-camera rotation-reader></a-camera>
+        </a-scene>
+    </body>
 </html>
