--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!doctype html>
-<html lang="">
+<html>
     <head>
         <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
         <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
         <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
         <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
         <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
-        <title></title>
     </head>
 
     <body style="margin: 0; overflow: hidden;">
@@ -38,7 +37,7 @@
             >
                 <a-entity
                     id="bowser-model"
-                    scale="0.052285107453441074 0.052285107453441074 0.052285107453441074"
+                    scale="0.480658333208606 0.480658333208606 0.480658333208606"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     class="clickable"
